Fix some css to fit stage on mobile

--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ h1{
 #cards-container {
 	display: flex;
 	justify-content: center;
+	flex-flow: wrap;
 	align-items: center;
 	height: 50vh;
 	margin: 0;
@@ -428,4 +429,35 @@ button {
   border-bottom: 24px solid transparent;
   border-left: 48px solid #ffffff;
   transition: all .3s ease;
+}
+
+
+@media screen and (max-width:767px) {
+
+	#intro-text, #level-text{
+		text-shadow: 3px 1px 8px black;
+		font-size: 30px;
+		text-transform: uppercase;
+	}
+
+	#level-text{
+		font-size: 20px;
+		background-color: #e43e7f;
+	}
+
+	#cards-container {
+    top: 40vh;
+		overflow: auto;
+	}
+
+	.scene.scene--card {
+  	margin: 20px 0;
+	}
+
+	#play-pause-container{
+		position: absolute;
+		bottom: 40px;
+		left: 40px;
+	}
+
 }
